# AIrux8_opti_logic

./: .gitignore  README.md  aircon_optimizer.py  aircon_optimizer_simple.ipynb  analysis_dashboard.py  category_mapping.json  main.py  pyproject.toml  run_optimization.py  step_by_step_optimization.ipynb
.streamlit/: config.toml
analysis/: dashboards.py  enhanced_analysis.py  optimization_analysis.py  reporting.py  run_analysis.py  simple_analysis.py
analysis/output/: summary_statistics.csv
config/: __init__.py  config.yml  utils.py
logs/preprocessing/unknown/: zone_mapping_log_20251002_134120.json  zone_mapping_log_20251002_134124.json  zone_mapping_log_20251002_134128.json  zone_mapping_log_20251002_134132.json  zone_mapping_log_20251002_134136.json  zone_mapping_log_20251002_134137.json  zone_mapping_log_20251002_134225.json  zone_mapping_log_20251002_134229.json  zone_mapping_log_20251002_134233.json  zone_mapping_log_20251002_134237.json  zone_mapping_log_20251002_134241.json  zone_mapping_log_20251002_134242.json  zone_mapping_log_20251002_134928.json  (+232 more)
master/: MASTER_Clea.json  MASTER_Clea.xlsx
old/: test_optimization.ipynb
optimization/: aircon_optimizer.py  feature_builder.py  helper_functions.py  optimizer.py  parallel_optimizer.py  period_optimizer.py
planning/: planner.py
planning/Clea/: control_type_schedule_20250928.csv  unit_schedule_20250928.csv
processing/: aggregator.py  preprocessor.py
processing/utilities/: category_mapping_loader.py  master_loader.py  weatherapi_client.py
training/: data_processor.py  model_builder.py
